--- a/.terraposh.config.json
+++ b/.terraposh.config.json
@@ -1,8 +1,8 @@
 {
-    "TF_CLI_ARGS_init": "-backend=true -upgrade=true -backend-config=../config/backend/local.tfvars -reconfigure",
-    "TF_CLI_ARGS_plan": "-detailed-exitcode -parallelism=20 -out=.terraform/plan.bin -var-file=../config/local.tfvars",
-    "TF_CLI_ARGS_apply": "-parallelism=20 .terraform/plan.bin",
-    "TF_CLI_ARGS_destroy": "-parallelism=20 -var-file=../config/local.tfvars",
-    "TF_CLI_ARGS_fmt": "-recursive",
-    "TF_CLI_ARGS_output": "-json"
+    "TF_CLI_ARGS_init": "",
+    "TF_CLI_ARGS_plan": "",
+    "TF_CLI_ARGS_apply": "",
+    "TF_CLI_ARGS_destroy": "",
+    "TF_CLI_ARGS_fmt": "",
+    "TF_CLI_ARGS_output": ""
 }
