Updated terraposh to have a new config parameter SkipWorkspace. When using terraform with a project using state in Terraform Cloud, it is necessary to disable new workspace creation

--- a/.terraposh.config.json
+++ b/.terraposh.config.json
@@ -1,6 +1,7 @@
 {
     "TerraformVersion": "",
     "CreateHardLink": false,
+    "SkipWorkspace": false,
     "TF_CLI_ARGS_init": "",
     "TF_CLI_ARGS_plan": "",
     "TF_CLI_ARGS_apply": "",
